k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hk-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: registry.gitlab.com/randydavidl78/habit-kicker/api
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 5000
