k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hk-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: registry.gitlab.com/randydavidl78/habit-kicker/client
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 3000
