k8s/api-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: hk-api-cluster
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
