k8s/client-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: hk-client-cluster
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
