k8s/hk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hk-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: hk-client-cluster
                port:
                  number: 3000
            pathType: Prefix
            path: /?(.*)
